Correct pagination layout shift

--- a/src/components/assets/styles/readerPagination.module.css
+++ b/src/components/assets/styles/readerPagination.module.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   display: grid;
   grid-template-areas: "pagination-start pagination-center pagination-end";
-  grid-template-columns: 1fr minmax(1fr, auto) 1fr;
+  grid-template-columns: 1fr minmax(auto, 1fr) 1fr;
   background-color: var(--theme-background);
   color: var(--theme-text);
   align-items: center;
@@ -33,19 +33,15 @@
   padding: calc(var(--icon-size, 24px) * (1/4)) calc(var(--layout-spacing) / 2);
   gap: calc(var(--layout-spacing) / 2);
   max-height: calc(var(--icon-size, 24px) * 2);
-  width: 100%;
+  max-width: 100%;
   border-radius: var(--layout-radius);
   display: flex;
   align-items: center;
 }
 
-.previousButton {
-  justify-content: flex-start;
-}
-
 .nextButton {
+  margin-inline-start: auto;
   text-align: end;
-  justify-content: flex-end;
 }
 
 .paginationListItem button[data-hovered] {
